gcc/testsuite/g++.dg/modules/mod-decl-5_b.C


import thing.baz;

export int foo (); // { dg-error "after an interface" }

export module thing.baz; // { dg-error "already imported" }

import thing.baz;

